// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`theme has truthy properties 1`] = `
<styled.div
  bg="green"
  className="layout-row flex-100 layout-align-center"
  tenant={
    Object {
      "data": Object {
        "id": 123,
        "name": "FOO_NAME",
        "scope": Object {
          "closed_quotation_tool": true,
          "modes_of_transport": Object {
            "air": Object {},
            "ocean": Object {
              "OCEAN_LOAD_TYPE": true,
            },
            "rail": Object {},
            "truck": Object {},
          },
        },
        "subdomain": "foosubdomain",
        "theme": Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        },
      },
    }
  }
>
  <div
    className="layout-row flex-100 layout-wrap"
  >
    <div
      className="flex-100 layout-row"
    >
      <Component
        invert={true}
        isLanding={true}
        noMessages={true}
        scrollable={true}
        theme={
          Object {
            "background": "green",
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
            "logoLarge": "FOO_LOGO_LARGE",
            "logoWhite": "FOO_LOGO_WHITE",
            "welcome_text": "FOO_WELCOME_TEXT",
          }
        }
        user={
          Object {
            "company_name": "FOO_COMPANY",
            "currency": "EUR",
            "email": "foo@bar.baz",
            "first_name": "John",
            "guest": false,
            "last_name": "Doe",
            "phone": "6345789",
            "role": Object {
              "name": "shipper",
            },
            "role_id": 2,
          }
        }
      />
    </div>
    <div
      className="flex-50 layout-row layout-align-center layout-wrap"
    >
      <div
        className="content_wrapper flex-100 layout-row layout-wrap layout-align-center-center"
      >
        <div
          className="flex-75 banner_text"
        >
          <img
            alt=""
            className="flex-none tenant_logo_landing"
            src="FOO_LOGO_WHITE"
          />
          <h2
            className="flex-none"
          >
            <b>
              Welcome to the
            </b>
             
            <br />
            <i>
               
               
            </i>
             
            <b>
               
              <br />
              FOO_WELCOME_TEXT
            </b>
          </h2>
          <div
            className="wrapper_hr"
          >
            <hr />
          </div>
          <div
            className="wrapper_h3"
          >
            <h3
              className="flex-none"
            >
              Enjoy the most advanced and easy to use 
              <b>
                booking system
              </b>
               in the market. Finally, shipping is as simple as it should be.
            </h3>
          </div>
        </div>
        <ButtonSection
          bookNow={[Function]}
          className="hide_h_xxs"
          t={[Function]}
          tenant={
            Object {
              "data": Object {
                "id": 123,
                "name": "FOO_NAME",
                "scope": Object {
                  "closed_quotation_tool": true,
                  "modes_of_transport": Object {
                    "air": Object {},
                    "ocean": Object {
                      "OCEAN_LOAD_TYPE": true,
                    },
                    "rail": Object {},
                    "truck": Object {},
                  },
                },
                "subdomain": "foosubdomain",
                "theme": Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                },
              },
            }
          }
          theme={
            Object {
              "background": "green",
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
              "logoLarge": "FOO_LOGO_LARGE",
              "logoWhite": "FOO_LOGO_WHITE",
              "welcome_text": "FOO_WELCOME_TEXT",
            }
          }
          user={
            Object {
              "company_name": "FOO_COMPANY",
              "currency": "EUR",
              "email": "foo@bar.baz",
              "first_name": "John",
              "guest": false,
              "last_name": "Doe",
              "phone": "6345789",
              "role": Object {
                "name": "shipper",
              },
              "role_id": 2,
            }
          }
        />
      </div>
    </div>
    <div
      className="flex-50 layout-row layout-align-center layout-wrap"
    >
      <ButtonSection
        bookNow={[Function]}
        className="hide_h_gt_xxs"
        t={[Function]}
        tenant={
          Object {
            "data": Object {
              "id": 123,
              "name": "FOO_NAME",
              "scope": Object {
                "closed_quotation_tool": true,
                "modes_of_transport": Object {
                  "air": Object {},
                  "ocean": Object {
                    "OCEAN_LOAD_TYPE": true,
                  },
                  "rail": Object {},
                  "truck": Object {},
                },
              },
              "subdomain": "foosubdomain",
              "theme": Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              },
            },
          }
        }
        theme={
          Object {
            "background": "green",
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
            "logoLarge": "FOO_LOGO_LARGE",
            "logoWhite": "FOO_LOGO_WHITE",
            "welcome_text": "FOO_WELCOME_TEXT",
          }
        }
        user={
          Object {
            "company_name": "FOO_COMPANY",
            "currency": "EUR",
            "email": "foo@bar.baz",
            "first_name": "John",
            "guest": false,
            "last_name": "Doe",
            "phone": "6345789",
            "role": Object {
              "name": "shipper",
            },
            "role_id": 2,
          }
        }
      />
    </div>
  </div>
</styled.div>
`;

exports[`user.role_id is 1 1`] = `
<styled.div
  bg="https://assets.itsmycargo.com/assets/images/welcome/country/header.jpg"
  className="layout-row flex-100 layout-align-center"
  tenant={
    Object {
      "data": Object {
        "id": 123,
        "name": "FOO_NAME",
        "scope": Object {
          "closed_quotation_tool": true,
          "modes_of_transport": Object {
            "air": Object {},
            "ocean": Object {
              "OCEAN_LOAD_TYPE": true,
            },
            "rail": Object {},
            "truck": Object {},
          },
        },
        "subdomain": "foosubdomain",
        "theme": Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        },
      },
    }
  }
>
  <div
    className="layout-row flex-100 layout-wrap"
  >
    <div
      className="flex-100 layout-row"
    >
      <Component
        invert={true}
        isLanding={true}
        noMessages={true}
        scrollable={true}
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
        user={
          Object {
            "company_name": "FOO_COMPANY",
            "currency": "EUR",
            "email": "foo@bar.baz",
            "first_name": "John",
            "guest": false,
            "last_name": "Doe",
            "phone": "6345789",
            "role": Object {
              "name": "shipper",
            },
            "role_id": 1,
          }
        }
      />
    </div>
    <div
      className="flex-50 layout-row layout-align-center layout-wrap"
    >
      <div
        className="content_wrapper flex-100 layout-row layout-wrap layout-align-center-center"
      >
        <div
          className="flex-75 banner_text"
        >
          <img
            alt=""
            className="flex-none tenant_logo_landing"
            src=""
          />
          <h2
            className="flex-none"
          >
            <b>
              Welcome to the
            </b>
             
            <br />
            <i>
               
               
            </i>
             
            <b>
               
              <br />
              shop for online freight
            </b>
          </h2>
          <div
            className="wrapper_hr"
          >
            <hr />
          </div>
          <div
            className="wrapper_h3"
          >
            <h3
              className="flex-none"
            >
              Enjoy the most advanced and easy to use 
              <b>
                booking system
              </b>
               in the market. Finally, shipping is as simple as it should be.
            </h3>
          </div>
        </div>
        <ButtonSection
          bookNow={[Function]}
          className="hide_h_xxs"
          t={[Function]}
          tenant={
            Object {
              "data": Object {
                "id": 123,
                "name": "FOO_NAME",
                "scope": Object {
                  "closed_quotation_tool": true,
                  "modes_of_transport": Object {
                    "air": Object {},
                    "ocean": Object {
                      "OCEAN_LOAD_TYPE": true,
                    },
                    "rail": Object {},
                    "truck": Object {},
                  },
                },
                "subdomain": "foosubdomain",
                "theme": Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                },
              },
            }
          }
          theme={
            Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            }
          }
          user={
            Object {
              "company_name": "FOO_COMPANY",
              "currency": "EUR",
              "email": "foo@bar.baz",
              "first_name": "John",
              "guest": false,
              "last_name": "Doe",
              "phone": "6345789",
              "role": Object {
                "name": "shipper",
              },
              "role_id": 1,
            }
          }
        />
      </div>
    </div>
    <div
      className="flex-50 layout-row layout-align-center layout-wrap"
    >
      <ButtonSection
        bookNow={[Function]}
        className="hide_h_gt_xxs"
        t={[Function]}
        tenant={
          Object {
            "data": Object {
              "id": 123,
              "name": "FOO_NAME",
              "scope": Object {
                "closed_quotation_tool": true,
                "modes_of_transport": Object {
                  "air": Object {},
                  "ocean": Object {
                    "OCEAN_LOAD_TYPE": true,
                  },
                  "rail": Object {},
                  "truck": Object {},
                },
              },
              "subdomain": "foosubdomain",
              "theme": Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              },
            },
          }
        }
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
        user={
          Object {
            "company_name": "FOO_COMPANY",
            "currency": "EUR",
            "email": "foo@bar.baz",
            "first_name": "John",
            "guest": false,
            "last_name": "Doe",
            "phone": "6345789",
            "role": Object {
              "name": "shipper",
            },
            "role_id": 1,
          }
        }
      />
    </div>
  </div>
</styled.div>
`;

exports[`user.role_id is 2 1`] = `
<styled.div
  bg="https://assets.itsmycargo.com/assets/images/welcome/country/header.jpg"
  className="layout-row flex-100 layout-align-center"
  tenant={
    Object {
      "data": Object {
        "id": 123,
        "name": "FOO_NAME",
        "scope": Object {
          "closed_quotation_tool": true,
          "modes_of_transport": Object {
            "air": Object {},
            "ocean": Object {
              "OCEAN_LOAD_TYPE": true,
            },
            "rail": Object {},
            "truck": Object {},
          },
        },
        "subdomain": "foosubdomain",
        "theme": Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        },
      },
    }
  }
>
  <div
    className="layout-row flex-100 layout-wrap"
  >
    <div
      className="flex-100 layout-row"
    >
      <Component
        invert={true}
        isLanding={true}
        noMessages={true}
        scrollable={true}
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
        user={
          Object {
            "company_name": "FOO_COMPANY",
            "currency": "EUR",
            "email": "foo@bar.baz",
            "first_name": "John",
            "guest": false,
            "last_name": "Doe",
            "phone": "6345789",
            "role": Object {
              "name": "shipper",
            },
            "role_id": 2,
          }
        }
      />
    </div>
    <div
      className="flex-50 layout-row layout-align-center layout-wrap"
    >
      <div
        className="content_wrapper flex-100 layout-row layout-wrap layout-align-center-center"
      >
        <div
          className="flex-75 banner_text"
        >
          <img
            alt=""
            className="flex-none tenant_logo_landing"
            src=""
          />
          <h2
            className="flex-none"
          >
            <b>
              Welcome to the
            </b>
             
            <br />
            <i>
               
               
            </i>
             
            <b>
               
              <br />
              shop for online freight
            </b>
          </h2>
          <div
            className="wrapper_hr"
          >
            <hr />
          </div>
          <div
            className="wrapper_h3"
          >
            <h3
              className="flex-none"
            >
              Enjoy the most advanced and easy to use 
              <b>
                booking system
              </b>
               in the market. Finally, shipping is as simple as it should be.
            </h3>
          </div>
        </div>
        <ButtonSection
          bookNow={[Function]}
          className="hide_h_xxs"
          t={[Function]}
          tenant={
            Object {
              "data": Object {
                "id": 123,
                "name": "FOO_NAME",
                "scope": Object {
                  "closed_quotation_tool": true,
                  "modes_of_transport": Object {
                    "air": Object {},
                    "ocean": Object {
                      "OCEAN_LOAD_TYPE": true,
                    },
                    "rail": Object {},
                    "truck": Object {},
                  },
                },
                "subdomain": "foosubdomain",
                "theme": Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                },
              },
            }
          }
          theme={
            Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            }
          }
          user={
            Object {
              "company_name": "FOO_COMPANY",
              "currency": "EUR",
              "email": "foo@bar.baz",
              "first_name": "John",
              "guest": false,
              "last_name": "Doe",
              "phone": "6345789",
              "role": Object {
                "name": "shipper",
              },
              "role_id": 2,
            }
          }
        />
      </div>
    </div>
    <div
      className="flex-50 layout-row layout-align-center layout-wrap"
    >
      <ButtonSection
        bookNow={[Function]}
        className="hide_h_gt_xxs"
        t={[Function]}
        tenant={
          Object {
            "data": Object {
              "id": 123,
              "name": "FOO_NAME",
              "scope": Object {
                "closed_quotation_tool": true,
                "modes_of_transport": Object {
                  "air": Object {},
                  "ocean": Object {
                    "OCEAN_LOAD_TYPE": true,
                  },
                  "rail": Object {},
                  "truck": Object {},
                },
              },
              "subdomain": "foosubdomain",
              "theme": Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              },
            },
          }
        }
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
        user={
          Object {
            "company_name": "FOO_COMPANY",
            "currency": "EUR",
            "email": "foo@bar.baz",
            "first_name": "John",
            "guest": false,
            "last_name": "Doe",
            "phone": "6345789",
            "role": Object {
              "name": "shipper",
            },
            "role_id": 2,
          }
        }
      />
    </div>
  </div>
</styled.div>
`;
